# Lila

./: .env.example  .eslintrc.json  .gitignore  Dockerfile  LICENSE  README.md  index.html  middleware.ts  package-lock.json  package.json  railway.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
agent-service/: .env.example  Dockerfile  lila.py  main.py  requirements.txt
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
app/_components/: edge-graph-league.tsx  edge-graph.tsx  landing-scene.tsx  landing-sculpture.tsx  landing-ticker.tsx  member-landing.tsx  public-landing-feed.tsx  public-landing.tsx  slot-reel.tsx  sports-ticker.tsx
app/bazaar/: page.tsx
app/bounty/: page.tsx
app/commodities/: page.tsx
app/handicappers/: page.tsx
app/help/: page.tsx
app/horse-racing/: page.tsx
app/infoyard/: page.tsx
app/lila/: page.tsx
app/local/: page.tsx
app/locals/: page.tsx
app/login/: page.tsx
app/marketplace/: page.tsx
app/sports/: page.tsx
app/subscribe/: page.tsx
app/thepark/: page.tsx
app/theyard/: page.tsx
app/theyield/: page.tsx
app/tokenomics/: page.tsx
app/viewer/: page.tsx
lib/: affiliates.ts  agent-brief.ts  agent-tick.ts  alerts.ts  analyst-loop.ts  analyst-watchlist.ts  analyst.ts  article-engine.ts  artist-loop.ts  bounties-fetch.ts  bounty-engine.ts  broadcast-loop.ts  ceelo-loop.ts  commodities.ts  config.ts  ct-compare.ts  db.ts  desk.ts  devto-publish.ts  discovery-loop.ts  dm-loop.ts  forge-loop.ts  github-pr.ts  gumroad-reverify.ts  gumroad.ts  lila-loop.ts  llm.ts  management-loop.ts  priority.ts  research-engine.ts  retention.ts  scout-loop.ts  season.ts  tasker-loop.ts  telegram-mirror.ts  trading-engine.ts  viewer-auth.ts  viewers.ts
lib/__tests__/: ceelo-loop-retry.test.ts  ct-compare.test.ts  trading-engine-close.test.ts  viewers-grant.test.ts
lib/autonomy/: context.ts  dispatch.ts  loop.ts  router.ts  tree.ts
lib/bazaar/: agents.ts  gigs.ts  hmac.ts  ledger.ts  skills.ts
lib/bounties/: algora.ts  draft-helpers.ts  gitcoin.ts
lib/ceelo/: espn.ts  nflverse.ts  odds.ts  pbp.ts  public-bets.ts  ratings.ts  teams.ts  venues.ts
mockups/: park-casino-mobile.html
programs/ldgr/programs/ldgr-escrow/: Cargo.toml
programs/ldgr/programs/ldgr-escrow/src/: lib.rs
public/: manifest.json  sw.js
scripts/: dev-autonomy-tick.ts  seed-marketplace.ts  seed-memory.ts
services/ledger-bot/: Dockerfile  README.md  pyproject.toml
services/ledger-bot/src/: budget.py  config.py  conversation.py  deepseek.py  main.py  persona.py  ratelimit.py  telegram.py
services/ledger-bot/tests/: test_budget.py  test_persona.py  test_ratelimit.py
services/lila-bot/: Dockerfile  README.md  pyproject.toml
services/lila-bot/src/: config.py  escrow_bridge.py  handlers.py  intents.py  main.py
services/lila-bot/tests/: test_intents.py
(+234 files in other folders)
