[package]
name = "ldgr-escrow"
version = "0.1.0"
description = "Milestone escrow program for $LDGR labor payments in The Bazaar"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ldgr_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
