[package]
name = "ldgr-escrow"
version = "0.1.0"
description = "Milestone escrow program for $LDGR labor payments in The Bazaar"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ldgr_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

# Anchor 0.30.1 + solana_program macros reference platform cfgs that newer
# rustc's check-cfg flags as unexpected. Declaring the known Solana/Anchor
# cfgs expected is the documented remedy — keeps `clippy -D warnings` clean
# without suppressing real lints.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("anchor-debug"))',
  'cfg(feature, values("custom-heap"))',
  'cfg(feature, values("custom-panic"))',
  'cfg(target_os, values("solana"))',
] }
